# python-memory-mcp-server

./: .clinerules  .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  changelog.md  enchanced_memory_capabilites_plan.md  improvement_proposal.md  knowledge_graph_manager.py  main.py  pyproject.toml  requirements-semantic-search.txt  requirements.txt
.github/workflows/: ci.yml
docs/: enhanced_memory_capabilities.md  implementation-guide.md  semantic_search.md
docs/adr/: 0001-implement-fuzzy-search.md  0002-knowledge-graph-consistency-guidelines.md  0003-improve-error-handling-in-jsonl-backend.md
memory_mcp_server/: embedding_service.py  exceptions.py  interfaces.py  knowledge_graph_manager.py  main.py  optimized-sqlite-manager.py  optimized_sqlite_manager.py  query_analyzer.py  validation.py
memory_mcp_server/backends/: __init__.py  base.py  jsonl.py  memory_usage.py  neo4j.py  sqlite.py
memory_mcp_server/benchmarking/: __init__.py  benchmarks.py  profiler.py
memory_mcp_server/caching/: __init__.py  cache.py
memory_mcp_server/models/: __init__.py  conversation_context.py
memory_mcp_server/services/: __init__.py  embedding_service.py  query_analyzer.py
memory_mcp_server/tools/: migrate_to_neo4j.py
src/claude_memory_python/: interfaces.py  knowledge_graph_manager.py  main.py
src/memory_mcp_server/: main.py  (+1 more)
tests/: conftest.py  test_knowledge_graph_manager.py  test_migration.py  test_optimized_knowledge_graph_manager.py  test_semantic_search.py  test_server.py  test_validation.py
(+14 files in other folders)
