[project]
name = "memory-mcp-server"
version = "0.1.0"
description = "MCP server implementation for managing Claude's memory and knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "estav", email = "your-email@example.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.1.2",
]

[project.scripts]
memory-mcp-server = "memory_mcp_server.main:main"

[project.urls]
Homepage = "https://github.com/estav/python-memory-mcp-server"
Repository = "https://github.com/estav/python-memory-mcp-server.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true